--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html> 
 <title>Copyright</title>
 <body>
+ <div class="topnav"
+       id="myTopnav">
+    <a href="tws1.html">TWS1</a>
+    <a href="tws2.html">TWS2</a>
+    <a href="tws3.html">TWS3</a>
+    <a href="tws4.html">TWS4</a>
+    <a href="tws5.html">TWS5</a>
     <h1>COPYRIGHT </h1>
 <p> I believe that copyright is a thing that should be allowed all over the world because if someone has a brilliant idea, they should have the right to own that item or idea. They should be able to profit from it and not someone else who didn't make the idea or invention. </p>
 </body>
