--- a/tws1.html
+++ b/tws1.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>TWS 1</title>
+	</head>
+	<body>
+		<p>I believe that intellectual property is worth protecting because you don't want someone to take credit for the hard work that you did. Everyone should be able to express themselves and say that that was their idea. You can stop pirates by actually enforcing the copyright laws not just stating them and thus they will be punished. You convince corporations by adjusting to what they want to hear.<p>
+	</body>
+</html>
